--- a/web/index.html
+++ b/web/index.html
@@ -18,18 +18,20 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Beemo - Your AI-powered household task management app">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="beemo">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="beemo_icon.svg">
 
   <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="beemo_icon.svg"/>
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>beemo</title>
+  <title>Beemo</title>
+  <meta name="theme-color" content="#FFC400">
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
